OAM-SAAS-Deployment-oamdev-dedicated-env/OAM-SAAS-Deployment-oamdev-dedicated-env/oam-environments/dedicated-dev-01/oamapp-resources.yaml
---
# Zoo Keeper
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oam-zk
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: oam-zk
    spec:
      containers:
      - name: oam-zk
        resources: 
          limits:
            cpu: 400m
            memory: 3000Mi
          requests:
            cpu: 400m
            memory: 3000Mi
---
# Drill 
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oam-drill
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: oam-drill
        resources: 
          limits:
            cpu: 500m
            memory: 8000Mi
          requests:
            cpu: 500m
            memory: 6000Mi
---
# OAM UI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oam-ui
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: oam-ui
        resources:
          limits:
            cpu: 500m
            memory: 4000Mi
          requests:
            cpu: 500m
            memory: 4000Mi               
---
# OAM Server            
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oam-server
spec:
  replicas: 1
  template:
    spec:
      containers:       
      - name: oam-server 
        resources:
          limits:
            cpu: 500m
            memory: 4000Mi
          requests:
            cpu: 500m
            memory: 4000Mi
---
# OAM Wokers
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: oam-workers
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: oam-worker
        resources:
          limits:
            cpu: 500m
            memory: 5000Mi
          requests:
            cpu: 500m
            memory: 5000Mi
---
# Elastic
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oam-elastic
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: elastic
        resources:
         limits:
           cpu: 500m
           memory: 5000Mi
         requests:
           cpu: 500m
           memory: 5000Mi
---
