OAM-SAAS-Deployment-oamdev-dedicated-env/OAM-SAAS-Deployment-oamdev-dedicated-env/oam-environments/dedicated-dev-01/oamapp-patch.yaml
# OAM UI
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oam-ui
spec:
  template:
    spec:
      containers:
      - name: oam-ui
        image: "997742452154.dkr.ecr.us-east-1.amazonaws.com/infobelt/oam-saas:4.52.5"
        imagePullPolicy: Always
---
# OAM Server 

metadata:
  name: oam-server
apiVersion: apps/v1
kind: Deployment
spec:
  template:
    spec:
      containers:
      - image: 997742452154.dkr.ecr.us-east-1.amazonaws.com/infobelt/oam-saas:4.52.5
        imagePullPolicy: Always
        name: oam-server
---
# OAM Workers 

metadata:
  name: oam-workers
apiVersion: apps/v1
kind: StatefulSet
spec:
  template:
    spec:
      containers:
      - image: 997742452154.dkr.ecr.us-east-1.amazonaws.com/infobelt/oam-saas:4.52.5
        imagePullPolicy: Always
        name: oam-worker
---
# Elastic
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oam-elastic
spec:
  template:
    spec:
      containers:
      - name: elastic
---
# OAM Ingress 

metadata:
  name: oam-ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
spec:
  rules:
  - host: iinfo1.infobelt.net
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: oam-ui
        pathType: Prefix
  - host: drill.iinfo1.infobelt.net
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 8047
            name: oam-drill-service
        pathType: Prefix
  tls:
  - secretName: iinfo1-infobelt-net
    hosts:
    - iinfo1.infobelt.net
  - secretName: drill-iinfo1-infobelt-net
    hosts:
    - drill.iinfo1.infobelt.net
---
